--- a/package_list.yml
+++ b/package_list.yml
@@ -8,10 +8,11 @@ dependencies:
   - jupyterlab
   - pandas>=1.3.4
   - notebook
-  - rise
   - numpy
   - scipy
   - spyder
   - matplotlib
   - nbtutor
   - scikit-learn>=1.0.1
+  - seaborn
+
